testing speed of live site and fixing layout issues

--- a/components/products/Product/product.module.scss
+++ b/components/products/Product/product.module.scss
@@ -14,17 +14,5 @@
   }
   .productColours {
     @include flexCenter;
-    .border {
-      @include flexCenter;
-      cursor: pointer;
-      border: 1px solid $grey-4;
-      padding: 2px;
-      margin: 0 0.2em;
-      .colour {
-        display: flex;
-        width: 12px;
-        height: 12px;
-      }
-    }
   }
 }
