--- a/styles/pages/productPage.module.scss
+++ b/styles/pages/productPage.module.scss
@@ -18,29 +18,31 @@
       text-align: center;
     }
   }
-  .productColoursWrap {
-    display: grid;
-    grid-template-columns: 1fr 8fr;
+  .productImagesWrap {
+    position: relative;
     background-color: $grey--1;
+    height: 200px;
+    padding: 0 2em;
     .productColoursButtons {
+      min-height: 30px;
       @include flexCenter;
-      flex-direction: column;
-      .border {
-        @include flexCenter;
-        cursor: pointer;
-        border: 1px solid $grey-4;
-        padding: 2px;
-        margin: 0.2em 0;
-        .colour {
-          display: flex;
-          width: 12px;
-          height: 12px;
-        }
+      @media (min-width: $media-tablet) {
+        position: absolute;
+        flex-direction: column;
       }
     }
-    .productColours {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+
+    .productImages {
+      @include flexCenter;
+
+      .imageWrap {
+        height: 100%;
+        width: 100%;
+        min-height: 50px;
+        min-width: 50px;
+        max-height: 300px;
+        max-width: 300px;
+      }
     }
   }
 }
